# ecom

./: docker-compose.yml  pyproject.toml
accounts/: admin.py  models.py
accounts/migrations/: 0001_initial.py  0002_auto_20210927_1946.py
carts/: admin.py  context_processors.py  models.py  urls.py  views.py
carts/migrations/: 0001_initial.py  0002_auto_20210928_1959.py
category/: admin.py  context_processors.py  models.py
category/migrations/: 0001_initial.py
config/: settings.py  urls.py
pages/: views.py
store/: admin.py  models.py  urls.py  views.py
store/migrations/: 0001_initial.py
templates/: _base.html  cart.html  home.html  product_detail.html  store.html
templates/includes/: _navbar.html
