[tool.poetry]
name = "ecom"
version = "0.1.0"
description = ""
authors = ["Tzu-Fan Tang <proxvision@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.12"
Django = "3.1.13"
psycopg2-binary = "^2.9.1"
Pillow = "7.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
